fix: NPE in RecipeRegistry